--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -191,6 +191,7 @@ html {
     font-size: 18px;
     margin-top: 25px;
     font-weight: 500;
+    text-shadow: 0 0 1px black;
 }
 
 #content .content-section{
